k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nyaymadad
  labels:
    app.kubernetes.io/name: nyaymadad
